--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
