--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,9 @@
 		// Sets the run context to one level up instead of the .devcontainer folder.
 		"context": "..",
 		// Using standard Dockerfile name
-		"dockerfile": "../Dockerfile"
+		"dockerfile": "../Dockerfile",
+		// Use the dev target for full development tooling
+		"target": "dev"
 	},
   "mounts": [
     "source=${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,readonly",
@@ -15,6 +17,7 @@
     "source=${localEnv:HOME}/.gitconfig,target=/root/.gitconfig,type=bind,readonly",
     "source=${localEnv:HOME}/.aws,target=/root/.aws,type=bind,readonly",
     "source=${localEnv:HOME}/.mcp-auth,target=/root/.mcp-auth,type=bind,readonly",
+    "source=${localEnv:HOME}/.claude,target=/root/.claude,type=bind",
 		"source=${localEnv:HOME}/.cursor,target=/root/.cursor,type=bind",
 		"source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
   ],
@@ -28,8 +31,7 @@
 	// Override the CMD from Dockerfile for development (keeps container alive)
 	"overrideCommand": true,
 
-	// Run development setup script after container is created
-	"postCreateCommand": "bash .devcontainer/setup-dev.sh",
+	// Development setup is now baked into the Dockerfile dev stage (no postCreateCommand needed)
 
 	// Set environment variables for fish to use writable location for universal variables
 	"containerEnv": {
